--- a/Contact.html
+++ b/Contact.html
@@ -10,30 +10,36 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<body background="contact1.jpg">
 			<div class="topnav">
-			<a class="active" href="Thannir.html">Vyshnavi's Profile </a>
-			<a class="active" href="Home.html">Home</a>
+			<a href="Thannir.html">Vyshnavi's Profile </a>
+			<a href="Home.html">Home</a>
 			<a href="YourChoice.html">Calculation </a>
-			<a href="Contact.html">Contact</a>
+			<a class="active" href="Contact.html">Contact</a>
 			</div>
 		<header class="section-header"><h3>
 			Contact From Any of these @s531441</h3>
 						
 			<a  href="https://www.facebook.com/"><img src="facebook.jpg" alt="Go to Facebook..!" width="56" height="56" border="0"></a>
 			<a  href="https://github.com/vthannir?tab=stars"><img src="github.jpg" alt="Go to Facebook..!" width="56" height="56" border="0"></a>
-			<a   href="https://bitbucket.org/vthannir/"><img src="bit.jpg" alt="Go to Facebook..!" width="56" height="56" border="0"></a>
+			<a  href="https://bitbucket.org/vthannir/"><img src="bit.jpg" alt="Go to Facebook..!" width="56" height="56" border="0"></a>
 			<a  href="https://www.linkedin.com/"><img src="link.jpg" alt="Go to Facebook..!" width="56" height="56" border="0"></a>
 		</header>
 		<p><br/>
-		<form><div class="form-group">
+		<form>
+		
+		
+		
+		
+		
+		<center><div class="form-group">
       <label for="usr">Enter your mail ID </label>
-      <input type="text" class="form-control" id="usr">
+      <input type="text"  class="form-control" id="usr">
 	  <div class="form-group">
       <label for="usr">Please enter the password </label>
       <input type="password" class="form-control" id="usr">
 	  <div class="form-group">
       <label for="usr">Enetr your comments </label>
       <input type="text" class="form-control" id="usr">
-	  <input type="submit" value="Go"></div>
+	  <input type="submit" value="Go"></div></center>
 	  </p><center></form>
 		
 		<!--<h3> <i>Vyshnavi Srilaxmi Thannir's Profile<i></h3>
