--- a/Home.html
+++ b/Home.html
@@ -9,18 +9,17 @@
 </head>
 	<body background="heart.jpg">
 			<div class="topnav">
-			<a class="active" href="Thannir.html">Vyshnavi's Profile </a>
+			<a href="Thannir.html">Vyshnavi's Profile </a>
 			<a class="active" href="Home.html">Home</a>
 			<a href="YourChoice.html">Calculation</a>
 			<a href="Contact.html">Contact</a>
 			</div>
 		<article>
-		<header>
-		<section><center><header><br><h3> <i>Vedio on is "Computer Programing hard to learn " by mark zuckerberg </i></h3></header>
+		<section class = "container" ><center><header><br><h3> <i>Vedio on is "Computer Programing hard to learn " by mark zuckerberg </i></h3></header>
 				<p>
-<iframe align="center" width="560" height="315" src="https://www.youtube-nocookie.com/embed/IoPx_rSicrM" frameborder="0" allow="autoplay; encrypted-media " allowfullscreen></iframe>
+<iframe align="center" width="350" height="250" src="https://www.youtube-nocookie.com/embed/IoPx_rSicrM" frameborder="0" allow="autoplay; encrypted-media " allowfullscreen></iframe>
 		<!--<img class="img-circle" src="newg.gif">--></center>
-		<!--<img class="img-circle" src="vysh.jpg">--></header>
+		<!--<img class="img-circle" src="vysh.jpg">--></section>
 			<center><section><header><br><h2>So What is This About?:<img src="fun2.gif" height="70" width="200"></h2></header>
 				<p font-size: 15px;>This is the first website that i created for Assignment A01,
 				I want to include some Paragraphs that has no much meaning 
