--- a/Thannir.html
+++ b/Thannir.html
@@ -10,7 +10,7 @@
 	<body background="heart.jpg">
 			<div class="topnav">
 			<a class="active" href="Thannir.html">Vyshnavi's Profile </a>
-			<a class="active" href="Home.html">Home</a>
+			<a href="Home.html">Home</a>
 			<a href="YourChoice.html">Calculation</a>
 			<a href="Contact.html">Contact</a>
 			
