--- a/YourChoice.html
+++ b/YourChoice.html
@@ -11,9 +11,9 @@
 </head>
 	<body background="calculate.jpg">
 			<div class="topnav">
-			<a class="active" href="Thannir.html">Vyshnavi's Profile </a>
-			<a class="active" href="Home.html">Home</a>
-			<a href="YourChoice.html">Calculation</a>
+			<a href="Thannir.html">Vyshnavi's Profile </a>
+			<a href="Home.html">Home</a>
+			<a class="active" href="YourChoice.html">Calculation</a>
 			<a href="Contact.html">Contact</a>
 			
 			
@@ -27,18 +27,18 @@
 		
 		
 		<div class="container">
-  <h2><center>Lets..!! Calculate..!! the Duration Between Dates...!!</cenetr> </h2>
+  <h2><center>Lets..!! Calculate..!! Your Age...!! </h2></center>
   <p><font size="4"><b>The form below contains two input elements; to calculate the</b></font> </p>
   <form><img class="img-circle" src="newg.gif">
-    <div class="form-group" class="p-3 mb-2 bg-info text-white">
-      <label for="usr" ><h5><font size="4"><b>Enter the Start Day</b></font></h5></label>
+    <div class="form-group" >
+      <label for="usr" ><h5><font size="4"><b>Enter the date of date of Birth</b></font></h5></label>
       <input type="text" value="1/31/2018" class="form-control" id="usr">
     </div>
     <div class="form-group">
-      <label for="pwd" value="2/5/2018"><h5><font size="4"><b>Enter the Last Day</b><font></h5></label>
+      <label for="pwd" value="2/5/2018"><h5><font size="4"><b>Date of year till you want to know </b><font></h5></label>
       <input type="text" value="1/31/2018" class="form-control" id="pwd">
 	  <input type="submit" width="20px" hight="25px"value="Submit">
-	  <label for="text" ><h5><font size="4"><b>Duration for Days<b></font></h5></label>
+	  <label for="text" ><h5><font size="4"><b>Your Age<b></font></h5></label>
       <input type="text" value="6 days" class="form-control" id="pwd">
     </div>
   </form>
